--- a/style.css
+++ b/style.css
@@ -65,19 +65,25 @@
   white-space: nowrap;
 }
 
-.montando-o-painel .overlap-group {
+.green-text {
+  color: var(--lightmode-feedbackpositive-pure); 
+}
+
+
+.montando-o-painel .progress-bar {
   width: 442px;
   height: 8px;
-  top: 626px;
+  top: 666px;
   background-color: var(--lightmode-graysgray-2-lightmode);
   border-radius: 500px;
   position: absolute;
   left: 155px;
 }
 
-.montando-o-painel .rectangle {
-  width: 221px;
-  height: 8px;
+.montando-o-painel .bar {
+  width: 0;
+  height: 100%;
+  transition: width 0.5s;
   background-color: var(--lightmode-feedbackpositive-pure);
   border-radius: 500px;
 }
@@ -92,12 +98,24 @@
   left: 156px;
 }
 
-.montando-o-painel .text-wrapper-3 {
+
+.montando-o-painel .task1 {
   position: relative;
   width: fit-content;
   font-family: "Poppins", Helvetica;
   font-weight: 600;
-  color: var(--lightmode-feedbackpositive-pure);
+  color: #5A626E;
+  font-size: 14px;
+  letter-spacing: 0;
+  line-height: 14px;
+  white-space: nowrap;
+}
+.montando-o-painel .task2 {
+  position: relative;
+  width: fit-content;
+  font-family: "Poppins", Helvetica;
+  font-weight: 600;
+  color: #5A626E;
   font-size: 14px;
   letter-spacing: 0;
   line-height: 14px;
@@ -130,7 +148,7 @@
   left: 156px;
 }
 
-.montando-o-painel .p {
+.montando-o-painel .task3 {
   position: relative;
   width: fit-content;
   font-family: "Poppins", Helvetica;
@@ -141,7 +159,39 @@
   line-height: 14px;
   white-space: nowrap;
 }
-
+.montando-o-painel .task4 {
+  position: relative;
+  width: fit-content;
+  font-family: "Poppins", Helvetica;
+  font-weight: 600;
+  color: var(--lightmode-graysgray-6-lightmode);
+  font-size: 14px;
+  letter-spacing: 0;
+  line-height: 14px;
+  white-space: nowrap;
+}
+.montando-o-painel .task5 {
+  position: relative;
+  width: fit-content;
+  font-family: "Poppins", Helvetica;
+  font-weight: 600;
+  color: var(--lightmode-graysgray-6-lightmode);
+  font-size: 14px;
+  letter-spacing: 0;
+  line-height: 14px;
+  white-space: nowrap;
+}
+.montando-o-painel .task6 {
+  position: relative;
+  width: fit-content;
+  font-family: "Poppins", Helvetica;
+  font-weight: 600;
+  color: var(--lightmode-graysgray-6-lightmode);
+  font-size: 14px;
+  letter-spacing: 0;
+  line-height: 14px;
+  white-space: nowrap;
+}
 .montando-o-painel .icon-UI-general-2 {
   margin-top: -51px;
   position: relative;
@@ -152,6 +202,24 @@
 
 .montando-o-painel .frame-4 {
   top: 538px;
+  display: flex;
+  width: 255px;
+  align-items: center;
+  justify-content: space-between;
+  position: absolute;
+  left: 156px;
+}
+.montando-o-painel .frame-5 {
+  top: 578px;
+  display: flex;
+  width: 255px;
+  align-items: center;
+  justify-content: space-between;
+  position: absolute;
+  left: 156px;
+}
+.montando-o-painel .frame-6 {
+  top: 618px;
   display: flex;
   width: 255px;
   align-items: center;
