--- a/globals.css
+++ b/globals.css
@@ -5,9 +5,13 @@
 }
 html,
 body {
-  margin: 0px;
-  height: 100%;
+  margin: 0;
+  height: 100vh; /* Usar 100vh para ocupar 100% da altura da tela */
+  display: flex;
+  justify-content: center; /* Centralizar horizontalmente */
+  align-items: center; /* Centralizar verticalmente */
 }
+
 /* a blue color as a generic focus style */
 button:focus-visible {
   outline: 2px solid #4a90e2 !important;
