--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 .montando-o-painel {
   background-color: #ffffff;
-  display: flex;
   flex-direction: row;
   justify-content: center;
   width: 100%;
@@ -65,10 +64,6 @@
   white-space: nowrap;
 }
 
-.green-text {
-  color: var(--lightmode-feedbackpositive-pure); 
-}
-
 
 .montando-o-painel .progress-bar {
   width: 442px;
@@ -76,21 +71,19 @@
   top: 666px;
   background-color: var(--lightmode-graysgray-2-lightmode);
   border-radius: 500px;
-  position: absolute;
+  position: relative; 
   left: 155px;
 }
 
 .montando-o-painel .bar {
-  width: 0;
+  width: 0%;
   height: 100%;
   transition: width 0.5s;
   background-color: var(--lightmode-feedbackpositive-pure);
   border-radius: 500px;
 }
-
 .montando-o-painel .frame {
   top: 418px;
-  display: flex;
   width: 255px;
   align-items: center;
   justify-content: space-between;
@@ -99,23 +92,21 @@
 }
 
 
-.montando-o-painel .task1 {
+.montando-o-painel #task1 {
   position: relative;
   width: fit-content;
-  font-family: "Poppins", Helvetica;
   font-weight: 600;
-  color: #5A626E;
+  color: var(--lightmode-graysgray-6-lightmode);
   font-size: 14px;
   letter-spacing: 0;
   line-height: 14px;
   white-space: nowrap;
 }
-.montando-o-painel .task2 {
+.montando-o-painel #task2 {
   position: relative;
   width: fit-content;
-  font-family: "Poppins", Helvetica;
   font-weight: 600;
-  color: #5A626E;
+  color: var(--lightmode-graysgray-6-lightmode);
   font-size: 14px;
   letter-spacing: 0;
   line-height: 14px;
@@ -148,10 +139,9 @@
   left: 156px;
 }
 
-.montando-o-painel .task3 {
+.montando-o-painel #task3 {
   position: relative;
   width: fit-content;
-  font-family: "Poppins", Helvetica;
   font-weight: 600;
   color: var(--lightmode-graysgray-6-lightmode);
   font-size: 14px;
@@ -159,10 +149,9 @@
   line-height: 14px;
   white-space: nowrap;
 }
-.montando-o-painel .task4 {
+.montando-o-painel #task4 {
   position: relative;
   width: fit-content;
-  font-family: "Poppins", Helvetica;
   font-weight: 600;
   color: var(--lightmode-graysgray-6-lightmode);
   font-size: 14px;
@@ -170,28 +159,18 @@
   line-height: 14px;
   white-space: nowrap;
 }
-.montando-o-painel .task5 {
-  position: relative;
-  width: fit-content;
-  font-family: "Poppins", Helvetica;
+
+ .montando-o-painel #task5 {
   font-weight: 600;
-  color: var(--lightmode-graysgray-6-lightmode);
+  color: #5A626E;
   font-size: 14px;
-  letter-spacing: 0;
-  line-height: 14px;
   white-space: nowrap;
-}
-.montando-o-painel .task6 {
-  position: relative;
-  width: fit-content;
+  line-height: 14px;
+  margin-right: -1308px;
   font-family: "Poppins", Helvetica;
-  font-weight: 600;
-  color: var(--lightmode-graysgray-6-lightmode);
-  font-size: 14px;
-  letter-spacing: 0;
-  line-height: 14px;
-  white-space: nowrap;
-}
+  display: none;
+  margin-top: 1vw;
+} 
 .montando-o-painel .icon-UI-general-2 {
   margin-top: -51px;
   position: relative;
@@ -209,23 +188,14 @@
   position: absolute;
   left: 156px;
 }
+
 .montando-o-painel .frame-5 {
-  top: 578px;
-  display: flex;
-  width: 255px;
-  align-items: center;
-  justify-content: space-between;
-  position: absolute;
-  left: 156px;
-}
-.montando-o-painel .frame-6 {
   top: 618px;
-  display: flex;
   width: 255px;
-  align-items: center;
   justify-content: space-between;
   position: absolute;
   left: 156px;
+  justify-content: center;
 }
 
 .montando-o-painel .icon-UI-general-3 {
@@ -236,15 +206,16 @@
   margin-right: -1308px;
 }
 
-.montando-o-painel .text-wrapper-4 {
-  position: absolute;
-  top: 577px;
-  left: 339px;
+.montando-o-painel #text-wrapper-4 {
   font-family: "Poppins", Helvetica;
   font-weight: 600;
   color: var(--lightmode-graysgray-8-lightmode);
-  font-size: 32px;
+  font-size: 25px; 
   letter-spacing: 0;
-  line-height: 32px;
+  line-height: 32px; 
   white-space: nowrap;
+  position: absolute; 
+  text-align: center; 
+  width: 100%; 
+  top: -30px; 
 }
