--- a/globals.css
+++ b/globals.css
@@ -3,19 +3,53 @@
   -webkit-font-smoothing: antialiased;
   box-sizing: border-box;
 }
-html,
-body {
-  margin: 0;
-  height: 100vh; /* Usar 100vh para ocupar 100% da altura da tela */
-  display: flex;
-  justify-content: center; /* Centralizar horizontalmente */
-  align-items: center; /* Centralizar verticalmente */
+html{
+ width: 100%;
+ height: 100%;
 }
-
-/* a blue color as a generic focus style */
+body {
+  margin: 3vh 0; 
+  height: 100vh;
+  display: flex;
+  flex-direction: unset;
+}
+@media (min-width: 320px) {
+  body {
+    max-width: 70vw;
+    display: flex;
+  }
+  .img{
+    display: flex;
+    width: 300px;
+    height: 198px;
+    flex-direction: column;
+    white-space: wrap;
+  }
+}
+@media (max-width: 1024px) {
+  body{
+    max-width: 80vw;
+  }
+  .img{
+    width: 770px;
+    height: 564px;
+  }
+}
+  @media screen {
+    body{
+      max-width: 90vw;
+      margin: 4vw 0 auto;
+      justify-items: center;
+      align-items: center;
+    }
+    .img{
+      width: 670px;
+      height: 504px;
+    }
+  }
 button:focus-visible {
-  outline: 2px solid #4a90e2 !important;
   outline: -webkit-focus-ring-color auto 5px !important;
+  outline: 2px solid #4a90e2 !important;
 }
 a {
   text-decoration: none;
