--- a/globals.css
+++ b/globals.css
@@ -3,17 +3,15 @@
   -webkit-font-smoothing: antialiased;
   box-sizing: border-box;
 }
-html{
- width: 100%;
- height: 100%;
-}
+html,
 body {
-  margin: 3vh 0; 
+  margin: 5vh 3; 
+  width: 100vh;
   height: 100vh;
   display: flex;
-  flex-direction: unset;
+  flex-direction: row;
 }
-@media (min-width: 320px) {
+@media screen and (min-width: 320px) {
   body {
     max-width: 70vw;
     display: flex;
@@ -26,13 +24,13 @@ body {
     white-space: wrap;
   }
 }
-@media (max-width: 1024px) {
+@media screen and (max-width: 1024px) {
   body{
-    max-width: 80vw;
+    max-width: 90vw;
   }
   .img{
-    width: 770px;
-    height: 564px;
+    width: 790px;
+    height: 574px;
   }
 }
   @media screen {
