--- a/globals.css
+++ b/globals.css
@@ -11,7 +11,7 @@ body {
   display: flex;
   flex-direction: row;
 }
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 320px) {
   body {
     max-width: 70vw;
     display: flex;
@@ -36,13 +36,16 @@ body {
   @media screen {
     body{
       max-width: 90vw;
-      margin: 4vw 0 auto;
-      justify-items: center;
-      align-items: center;
+      padding: 6vw;
+      margin-left: 5vw;
+      position: absolute;
+      width: 100%;
+      height: 100%;
     }
     .img{
-      width: 670px;
-      height: 504px;
+      width: 904px;
+      height: 574px;
+
     }
   }
 button:focus-visible {
